# clog

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  install.sh  schema.sql
docs/: spec.md
src/: credentials.rs  db.rs  device.rs  git.rs  main.rs  models.rs  session.rs  sync.rs
