[package]
name = "clog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
sysinfo = "0.31"
dirs = "5.0"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
