[package]
name = "clog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
sysinfo = "0.31"
dirs = "5.0"
ctrlc = "3.4"
ulid = "1.1"
sha2 = "0.10"
base32 = "0.5"
keyring = "3.6"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
